@@ -8,6 +8,7 @@ HEAD
 - added commands for media features supported by Dialogic(R) Diva(R) Media Boards
 - added variable CAPI_CIP for full access to all bearer capabilities.
 - fixed CAPI 'chat' for using more than 8 controllers.
+- fixed CAPI 'chat' for not exceeding maximal size of CAPI message
 
 
 chan_capi-1.1.2
